Feature: Added Gem and score

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <script src="js/resources.js"></script>
+
+  <p id="score" class="center">Score</p>
+  <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
+
 </body>
 </html>
