Feature: Added Key interactivity

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 
-  <p id="score" class="center">Score</p>
+  <p>Score:</p>
+  <p id="score" class="center">0</p>
   <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
